--- a/assets/css/inicio.css
+++ b/assets/css/inicio.css
@@ -1,7 +1,8 @@
 
 body{
   background-color: rgb(0, 0, 0);
-  background-image: url(img/img-inicio/comunidad_bg.png);
+  background-image: url(../img/img-inicio/comunidad_bg.png);
+  background-attachment: fixed;
 }
 
 .texto-blanco{
@@ -74,13 +75,16 @@ body{
   margin-left: 2%;
 }
 
-#btn-rojo{
+.btn-rojo{
   background-color: #FF0000;
   margin-top: 3%;
   margin-bottom: 3%;
 }
+.btn-container-cliente{
+  position: fixed;
+}
 
-#btn-cliente{
+.btn-cliente{
   background-color: #FF0000;
   margin-top: 3%;
   margin-bottom: 3%;
